Bug 57050 - Conditional formatting after AUTOFILL is lost when the file is reopened
Summary: Conditional formatting after AUTOFILL is lost when the file is reopened
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.2.2 release
Hardware: Other All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.0.0
Keywords:
: 61136 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-11-13 06:53 UTC by Andreas Blochberger
Modified: 2013-02-20 06:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Conditional formating window snapshot (29.56 KB, image/png)
2012-11-17 07:29 UTC, TuxMario
Details
The example of speadsheet with conditional formating (39.62 KB, image/png)
2012-11-17 07:31 UTC, TuxMario
Details
snapshot of speadsheet after close and open (34.97 KB, image/png)
2012-11-17 07:33 UTC, TuxMario
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Blochberger 2012-11-13 06:53:50 UTC
Like mentioned in Bug 54464 comment #8, after saving and reopening of a file that contains cells with conditional formatting that originate from an autofill operation, the conditional formattings are gone.

Have a look at attachment #69828 [details] and attachment #69828 [details] from Bug 54464

Conditional formatting was copied ever since, and it still works in current versions. The only problem is, that they don't survive a save/open operation.
Comment 1 Andreas Blochberger 2012-11-13 06:57:20 UTC
attachment #69828 [details] (Document before autofill)
attachment #69829 [details] (Document after autofill, save)
Comment 2 Andreas Blochberger 2012-11-14 18:02:56 UTC
Doing the same with Caligra sheets, conditional formatting works as expected.

The conditional formatting has a wrong range. It is 
> calcext:target-range-address="Tabelle1.A1:Tabelle1.A1"
but should be
> calcext:target-range-address="Tabelle1.A1:Tabelle1.A2"
Comment 3 TuxMario 2012-11-17 07:29:29 UTC
Created attachment 70179 [details]
Conditional formating window snapshot

The conditional formating which is lost after closing the file
Comment 4 TuxMario 2012-11-17 07:31:05 UTC
Created attachment 70180 [details]
The example of speadsheet with conditional formating

Snapshot of speadsheet when conditional formating is OK
Comment 5 TuxMario 2012-11-17 07:33:32 UTC
Created attachment 70181 [details]
snapshot of speadsheet after close and open

The speadsheet after close and re-open of file. The conditional formating is empty (probably not saved by save action)
Comment 6 TuxMario 2012-11-17 07:39:01 UTC
Hello
I have a problem with this LibreOffice release. 
All my new conditional formatings of cells are lost after closinf the file.
Cells with conditional formatings done with LibreOffice 3.5 still are OK after closing the file
Here attached 3 snapshots of an example
The conditional formating window
The file before closing it
The file after re-opening

Bye TuxMario
Comment 7 TuxMario 2012-11-17 08:33:29 UTC
Hello again
In fact the problem exists when 
  _1  either cells are created by dragging one cell with conditional formating. All new cells don't kept the conditional formating after saving file
  _2  cells are created by Copy/Paste process All new cells don't kept the conditional formating after saving file

NB : When adding manually conditional formating the format is properly saved

Bye : Mario
Comment 8 Not Assigned 2012-11-24 15:04:29 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=add3633a6ec53b038ebd29b70125d0eb259549d6

autofill should adapt the cond format range, fdo#57050



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Rainer Bielefeld Retired 2013-02-20 06:31:06 UTC
*** Bug 61136 has been marked as a duplicate of this bug. ***