autofill should adapt the cond format range, fdo#57050

Change-Id: Iec5e4f75f92f4bfcc49d3e3e36090d0c7d0f8be3